chore(github): enable dependabot support for docker

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,17 @@ updates:
       - pascaliske
     labels:
       - dependencies
+  - package-ecosystem: docker
+    directory: /
+    schedule:
+      interval: daily
+    commit-message:
+      prefix: chore
+      include: scope
+    assignees:
+      - pascaliske
+    labels:
+      - dependencies
   - package-ecosystem: npm
     schedule:
       interval: daily
